k8s/platform/argocd/argocd-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: devops-tools
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    # Regla para el tráfico web (UI)
    - kind: Rule
      match: Host(`argocd.desarrollo`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    # Regla para el tráfico gRPC (CLI)
    - kind: Rule
      match: Host(`argocd.desarrollo`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c        # Necesario para que Traefik entienda gRPC
